[link,format-text] Fixed underline for links from the design system / Fixed vertical align for use as a text link

--- a/semcore/format-text/src/style/format-text.shadow.css
+++ b/semcore/format-text/src/style/format-text.shadow.css
@@ -30,7 +30,7 @@ SFormatText {
       text-decoration: none;
     }
 
-    &:hover {
+    &:not([data-ui-name='Link']):hover {
       color: var(--intergalactic-text-link-hover-active, #044792);
       border-color: var(--intergalactic-text-link-hover-active, #044792);
     }
